# Physical-AI-Humanoid-Robotics

./: .dockerignore  .env.example  .gitignore  CLAUDE.md
.specify/memory/: constitution.md
backend/: pyproject.toml
backend/src/: config.py  database.py  main.py  schemas.py  vector_db.py
backend/src/api/: chapter.py  translation.py  user_profile.py
backend/src/auth/: auth.py
backend/src/models/: chapter.py  translation.py  user.py  user_profile.py
backend/src/services/: chapter.py  personalization.py  translation.py  user_profile.py
my-first-book/: .eslintrc.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
my-first-book/docs/: chapter-01-intro.md  chapter-02-ros2.md  chapter-03-gazebo.md  chapter-04-isaac.md  chapter-05-vla.md  chapter-06-hardware.md  intro.md
my-first-book/src/components/: Chatbot.tsx  HeroSection.module.css  HeroSection.tsx
my-first-book/src/components/HomepageFeatures/: index.tsx  styles.module.css
my-first-book/src/components/PersonalizationToggle/: index.tsx
my-first-book/src/components/TranslationToggle/: index.tsx
my-first-book/src/components/UserProfile/: index.tsx
my-first-book/src/css/: custom.css
my-first-book/src/pages/: chapter.tsx  index.tsx  settings.tsx
my-frist-book-OLD-BACKUP/: package.json
specs/001-ai-textbook/: plan.md  spec.md  tasks.md
specs/001-ai-textbook/checklists/: requirements.md
